ライブラリ一覧の最新化

--- a/pg_stats_reporter_library_list.html
+++ b/pg_stats_reporter_library_list.html
@@ -12,7 +12,7 @@
 <h2>目次</h2>
 <ul>
 <li><a href="#change">変更履歴</a></li>
-<li><a href="#now">2020/05/12時点最新版</a></li>
+<li><a href="#now">2020/07/28時点最新版</a></li>
 <li><a href="#trunk">pg_stats_reporter trunk</a></li>
 <li><a href="#120">pg_stats_reporter 12</a></li>
 <li><a href="#110">pg_stats_reporter 11</a></li>
@@ -35,6 +35,11 @@
 </thead>
 <tbody>
 <tr>
+<td>第1.20版</td>
+<td>2020/07/28</td>
+<td>2020/07/28最新版に更新</td>
+</tr>
+<tr>
 <td>第1.19版</td>
 <td>2020/05/12</td>
 <td>trunkの使用ライブラリを更新<br/>pg_stats_reporter 12を追加<br/>2020/05/12最新版に更新</td>
@@ -54,17 +59,12 @@
 <td>2019/11/08</td>
 <td>trunkの使用ライブラリを最新に更新</td>
 </tr>
-<tr>
-<td>第1.15版</td>
-<td>2019/10/07</td>
-<td>2019/10/07最新版に更新</td>
-</tr>
 </tbody>
 </table>
 
 <br/><hr/>
 
-<h2 id="now">【2020/05/12時点最新版】</h2>
+<h2 id="now">【2020/07/28時点最新版】</h2>
 
 <table border="1">
 <thead>
@@ -80,20 +80,20 @@
 <tr>
 <td rowspan="37">PHP</td>
 <td rowspan="10">5.4.16</td>
-<td bgcolor="cyan">php-5.4.16-48.el7</td>
-<td rowspan="5" bgcolor="cyan">CentOS 7 2003(7.8)<br/>yum updateした最新版</td>
+<td bgcolor="white">php-5.4.16-48.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 2003(7.8)<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-5.4.16-48.el7</td>
+<td bgcolor="white">php-cli-5.4.16-48.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-5.4.16-48.el7</td>
+<td bgcolor="white">php-common-5.4.16-48.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-5.4.16-48.el7</td>
+<td bgcolor="white">php-pgsql-5.4.16-48.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-intl-5.4.16-48.el7</td>
+<td bgcolor="white">php-intl-5.4.16-48.el7</td>
 </tr>
 
 <tr>
@@ -114,27 +114,28 @@
 </tr>
 
 <tr>
-<td rowspan="12" bgcolor="white">7.2.11</td>
-<td bgcolor="cyan">php-7.2.11-2.module_el8.0.0</td>
-<td rowspan="6" bgcolor="cyan">CentOS 8 1911(8.1)<br/>yum updateした最新版</td>
+<td rowspan="6" bgcolor="cyan">7.2.24</td>
+<td bgcolor="cyan">php-7.2.24-1.module_el8.2.0</td>
+<td rowspan="6" bgcolor="cyan">CentOS 8 2004(8.2)<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-cli-7.2.24-1.module_el8.2.0</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-common-7.2.24-1.module_el8.2.0</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-pgsql-7.2.24-1.module_el8.2.0</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-xml-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-xml-7.2.24-1.module_el8.2.0</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-intl-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-intl-7.2.24-1.module_el8.2.0</td>
 </tr>
 
 <tr>
+<td rowspan="6" bgcolor="white">7.2.11</td>
 <td bgcolor="white">php-7.2.11-1_module_el8.0.0</td>
 <td rowspan="6" bgcolor="white">CentOS 8.0<br/>インストール媒体版</td>
 </tr>
@@ -155,13 +156,13 @@
 </tr>
 
 <tr>
-<td bgcolor="cyan">7.4.5</td><td rowspan="3" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
+<td bgcolor="cyan">7.4.8</td><td rowspan="3" colspan="2">コミュニティ(http://php.net/)がリリースしている最新版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">7.3.17</td>
+<td bgcolor="cyan">7.3.20</td>
 </tr>
 <tr>
-<td bgcolor="cyan">7.2.30</td>
+<td bgcolor="cyan">7.2.32</td>
 </tr>
 </tbody>
 <tfoot><tr><td colspan="4">
@@ -183,7 +184,7 @@
 <tbody>
 <tr>
 <td>jQuery</td>
-<td bgcolor="cyan">3.5.1</td>
+<td bgcolor="white">3.5.1</td>
 <td><a href="http://jquery.com/">http://jquery.com/</a></td>
 <td></td>
 </tr>
@@ -195,13 +196,13 @@
 </tr>
 <tr>
 <td>Smarty</td>
-<td bgcolor="white">3.1.34</td>
+<td bgcolor="cyan">3.1.35</td>
 <td><a href="http://www.smarty.net/">http://www.smarty.net/</a></td>
 <td></td>
 </tr>
 <tr>
 <td>tablesorter</td>
-<td bgcolor="cyan">2.31.3</td>
+<td bgcolor="white">2.31.3</td>
 <td bgcolor="white"><a href="https://github.com/Mottie/tablesorter">https://github.com/Mottie/tablesorter</a></li>
 <td bgcolor="white">PagerおよびPagerで使用するアイコンはaddonsに含まれています</td>
 </tr>
@@ -227,7 +228,7 @@
 <td>Superfish</td>
 <td bgcolor="white">1.7.10</td>
 <td bgcolor="white"><a href="https://superfish.joelbirch.co/">https://superfish.joelbirch.co/</a></td>
-<td bgcolor="cyan">サイトがなくなってる<br/>
+<td bgcolor="white">サイトがなくなってる<br/>
   <a href="https://superfish.joelbirch.design/">https://superfish.joelbirch.design/</a><br/>
   <a href="https://github.com/joeldbirch/superfish">https://github.com/joeldbirch/superfish</a><br/>
 で確認した範囲では、左記のバージョンが最新</td>
@@ -256,20 +257,20 @@
 <tr>
 <td rowspan="22">PHP</td>
 <td rowspan="10">5.4.16</td>
-<td bgcolor="cyan">php-5.4.16-48.el7</td>
-<td rowspan="5" bgcolor="cyan">CentOS 7 2003(7.8)<br/>yum updateした最新版</td>
+<td bgcolor="white">php-5.4.16-48.el7</td>
+<td rowspan="5" bgcolor="white">CentOS 7 2003(7.8)<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-5.4.16-48.el7</td>
+<td bgcolor="white">php-cli-5.4.16-48.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-5.4.16-48.el7</td>
+<td bgcolor="white">php-common-5.4.16-48.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-5.4.16-48.el7</td>
+<td bgcolor="white">php-pgsql-5.4.16-48.el7</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-intl-5.4.16-48.el7</td>
+<td bgcolor="white">php-intl-5.4.16-48.el7</td>
 </tr>
 
 <tr>
@@ -290,27 +291,28 @@
 </tr>
 
 <tr>
-<td rowspan="12" bgcolor="white">7.2.11</td>
-<td bgcolor="cyan">php-7.2.11-2.module_el8.0.0</td>
-<td rowspan="6" bgcolor="cyan">CentOS 8 1911(8.1)<br/>yum updateした最新版</td>
+<td rowspan="6" bgcolor="cyan">7.2.24</td>
+<td bgcolor="cyan">php-7.2.24-1.module_el8.2.0</td>
+<td rowspan="6" bgcolor="cyan">CentOS 8 2004(8.2)<br/>yum updateした最新版</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-cli-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-cli-7.2.24-1.module_el8.2.0</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-common-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-common-7.2.24-1.module_el8.2.0</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-pgsql-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-pgsql-7.2.24-1.module_el8.2.0</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-xml-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-xml-7.2.24-1.module_el8.2.0</td>
 </tr>
 <tr>
-<td bgcolor="cyan">php-intl-7.2.11-2.module_el8.0.0</td>
+<td bgcolor="cyan">php-intl-7.2.24-1.module_el8.2.0</td>
 </tr>
 
 <tr>
+<td rowspan="6" bgcolor="white">7.2.11</td>
 <td bgcolor="white">php-7.2.11-1_module_el8.0.0</td>
 <td rowspan="6" bgcolor="white">CentOS 8.0<br/>インストール媒体版</td>
 </tr>
